testes em js com DOM

--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudando Js</title>
-
+    <style>
+        * {
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: lightgrey;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Meus Primeiros Scripts em Js</h1>
     <h2>Brincando com o DOM</h2>
-    
-    <script src="./logicProgramac.js"></script>
+
+    <!-- <script src="./calc-IMC.js"></script> -->
+    <!-- <script src="./variaveis.js"></script> -->
+    <script src="./desafioABC.js"></script>
 </body>
 
 </html>
