trabalhando com operadores Logicos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <!-- <script src="./calc-IMC.js"></script> -->
     <!-- <script src="./variaveis.js"></script> -->
-    <script src="./desafioABC.js"></script>
+    <!-- <script src="./desafioABC.js"></script> -->
+    <script src="./operadores.js"></script>
+    
 </body>
 
 </html>
