--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- <script src="./variaveis.js"></script> -->
     <!-- <script src="./desafioABC.js"></script> -->
     <script src="./operadores.js"></script>
-    
+    <!-- <script src="./casting.js"></script> -->
 </body>
 
 </html>
